2008-07-01 11:36  art

	* [r125]
	  From Bob Kuehne:
	  fixed PPU to work with the new birfucated osg/include header
	  structure. three changes to a FindOSG.cmake module, and then to
	  the
	  parent CMakeLists.txt which uses that to setup include paths.

2008-05-14 15:33  art

	* [r124]
	  - Version 0.2 tagged

2008-05-14 10:28  art

	* [r123]
	  - Removed uneccesarry files
	  - changed the documentation little bit to deprectate the current
	  interface of the Shader class

2008-05-13 09:36  art

	* [r122]
	  - osg::ref_ptr for the Camera object in the Processor class
	  changed to osg::observer_ptr to overcome possible memory leaks,
	  thanks to Stephane for that.
	  - smal doc and build fixes

2008-05-08 11:29  art

	* [r121]
	  - CMake build system changed to automatically detect the
	  installed osg version and to install the plugins under this
	  directory.
	  - thanks to Robert Osfield for his suggestions

2008-05-07 20:21  art

	* [r120]
	  - Disable the FBO clearing of undefined texture values, now a
	  simple temporary image is used to upload 0 values to fresh output
	  textures

2008-05-07 19:58  art

	* [r119]
	  

2008-05-07 19:57  art

	* [r118]
	  From Stephane Lamoliatte:
	  - updated the main CMake file to allow the user to use the float
	  or
	  double type for BoundingBox / BoundingSphere / Matrix / Plane.
	  - updated CMake modules to install the library in the bin
	  directory for
	  Visual Studio (the same behaviour as OpenSceneGraph)
	  - removed compiler errors in Visual Studio 2005 (Visitor.cpp /
	  Visitor.h) using the ref_ptr<CleanTraverseMaskVisitor>
	  - updated the CMake file of the osgPPU plug'in to take into
	  account "Base.h"
	  - updated the CMake file of the dof example to take into account
	  "dofppu.h"
	  - modified the dof and hdr example code to center the viewer
	  window on
	  the main screen
	  - modified the dof and hdr example code to load shader using the
	  osgbd_glsl plug'in (now add the bin directory to the